# SpatialView

./: README.md  main.py  pyproject.toml  requirements.txt
SpatialView/: __init__.py  __main__.py  helper.py  node_model_template.py  type_id.py  vtk_actor.py  vtk_actor.pyi  vtk_algo_data.py  vtk_cylinder_model.py  vtk_display_actor_model.py  vtk_mapper_data_model.py  vtk_opengl_skybox.py  vtk_opengl_skybox.pyi  vtk_renderer.py  vtk_skybox.py  vtk_skybox.pyi  vtk_skybox_model.py  vtk_source_data_model.py  vtk_sphere_model.py
SpatialView/display/: __init__.py  vtk_actor_model.py  vtk_display_actor_model.py  vtk_renderer.py  vtk_renderer_model.py  vtk_skybox_model.py  vtk_text_actor.py
SpatialView/filter/: __init__.py  vtk_composite_data_geometry_filter_model.py  vtk_contour_filter_model.py  vtk_mapper_data_model.py  vtk_outline_filter_model.py  vtk_poly_data_tangents.py  vtk_texture_data.py  vtk_texture_map_to_sphere.py  vtk_texture_model.py
SpatialView/grids/: __init__.py  vtk_unstructured_grid_model.py
SpatialView/mapper/: __init__.py  vtk_data_set_mapper_model.py  vtk_poly_data_mapper_model.py
SpatialView/node_data/: __init__.py  vtk_algo_data.py  vtk_mapper_data.py  vtk_texture_data.py
SpatialView/parametrics/: __init__.py  vtk_parametric_factory.py  vtk_parametric_function_model.py  vtk_parametric_function_source_model.py  vtk_parametric_kuen_model.py
SpatialView/reader/: __init__.py  vtk_exodusII_reader.py  vtk_exodusII_reader.pyi  vtk_exodusII_reader_model.py  vtk_hdr_reader.py  vtk_hdr_reader_model.py  (+7 more)
examples/: main.py
tests/: tmp.py
(+55 files in other folders)
