[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "SpatialView"
version = "0.0.1"
description = "node graph for vtk"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
keywords = ["node editor", "pyside6", "vtk"]

authors = [
    { name = "yangfengzzz", email = "yangfengzzz@hotmail.com" }
]
maintainers = [
    { name = "yangfengzzz", email = "yangfengzzz@hotmail.com" }
]

classifiers = [
    # How mature is this project? Common values are
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    "Development Status :: 3 - Alpha",
    # Indicate who your project is intended for
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Graphics",
    # Pick your license as you wish
    "License :: OSI Approved :: MIT License",
]


dependencies = [
    "PySide6",
    "PySide6_Addons",
    "PySide6_Essentials",
    "shiboken6",
    "vtk"
]

[project.urls]
"Homepage" = "https://github.com/SpatialForce/SpatialView"
"Bug Reports" = "https://github.com/SpatialForce/SpatialView/issues"
"Source" = "https://github.com/SpatialForce/SpatialView"
